# Creek

./: CMakeLists.txt  LICENSE  README.md
ctgl/: ctgl.hpp  list.hpp  path.hpp  runtimeutility.hpp  utility.hpp
inc/: dataStreamManager.hpp
include/CompileTimeGraph/: algorithm.hpp  graph.hpp  runtimeutility.hpp
include/DataStreams/: dataStream.hpp  dataStreamManager.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/CompileTimeGraph/: CMakeLists.txt  algorithm_test.cpp  forge.hpp  graph_test.cpp  list_test.cpp  path_test.cpp
